--- a/css/style.css
+++ b/css/style.css
@@ -6,13 +6,45 @@
 
 body {
     background-color: rgb(255,255,255);
+    height: 100vh;
 }
 
 
 header {
-    border: 2px solid black;
+    background-color: white;
+    display: flex;
+    justify-content: space-around;
+    padding: 15px 0;
+    align-items: center;
 }
 
+.nav-link {
+    padding-right: 25px;
+    font-family: Ten system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    text-decoration: none;
+    color: black;
+    font-weight: 500;
+}
+
+.nav-link:hover {
+    color: rgb(255,107,1);
+}
+
+.descargar {
+    text-decoration: none;
+    color: black;
+    font-family: Ten system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 500;
+    background-color: white;
+    border-radius: 50px;
+    padding: 10px 30px;
+    border: 3px solid rgb(255,107,1);
+}
+
+.descargar:hover {
+    background-color: rgb(255,107,1);
+    border-color: white;
+}
 
 main {
     border: 2px solid red;
@@ -28,6 +60,6 @@ footer {
     background-color: rgb(66,66,66);
 }
 
-.img-huella {
-    font-size: 40px;
+.img-logo {
+    width: 110px;
 }
