--- a/css/style.css
+++ b/css/style.css
@@ -13,10 +13,15 @@ body {
 
 header {
     background-color: white;
+    border-bottom: 5px solid black;
     display: flex;
     justify-content: space-around;
     padding: 15px 0;
     align-items: center;
+}
+
+.img-logo {
+    width: 110px;
 }
 
 .nav-link {
@@ -42,25 +47,74 @@ header {
     border: 3px solid rgb(255,107,1);
 }
 
-.descargar:hover {
+.descargar:hover,.portfolio:hover,.hire-me:hover {
     background-color: rgb(255,107,1);
     border-color: white;
 }
 
 main {
-    border: 2px solid red;
+    
 }
 
+.descripcion {
+    font-family: Ten system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.hola {
+    font-size: 30px;
+    color: rgb(255,107,1)
+}
+
+.nombre {
+    font-size: 60px;
+}
+
+.color-texto{
+    color: rgb(255,107,1);
+}
+
+.portfolio,.hire-me {
+    text-decoration: none;
+    color: black;
+    font-family: Ten system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 500;
+    background-color: white;
+    border-radius: 50px;
+    padding: 10px 50px;
+    border: 3px solid rgb(255,107,1);
+}
+
+.botones {
+    padding-top: 40px;
+}
+
+.logos {
+    padding-top: 40px;
+    display: flex;
+    justify-content: space-around;
+}
+
+.face,.tw,.ig,.li {
+    font-size: 40px;
+}
 
 .hero {
-    border: 2px solid blueviolet ;
+    display: flex;
+    justify-content: space-around;
+    padding: 100px 0;
+    padding-left: 100px;
 }
+
+.foto {
+    width: 750px;
+
+}
+
+
 
 
 footer {
     background-color: rgb(66,66,66);
 }
 
-.img-logo {
-    width: 110px;
-}
+
