Le cambie la imagen de fondo

--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 body {
     background-color: rgb(255,255,255);
     height: 100vh;
-    background-image: url(../img/img-lunares.png);;
+    background-image: url(../img/fondo-lunares.jpg);;
 }
 
 
