--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body {
 
 header {
     background-color: white;
-    border-bottom: 5px solid black;
+    box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.25);
     display: flex;
     justify-content: space-around;
     padding: 15px 0;
