--- a/css/style.css
+++ b/css/style.css
@@ -116,14 +116,34 @@ main {
     display: flex;
     justify-content: space-around;
     text-align: center;
-    border: 2px solid black;
     margin: 120px 150px;
+    box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.25);
+    border-radius: 50px;
+    background-color: white;
 }
 
 .perfect,.quality,.lampara {
     font-size: 80px;
+    color: rgb(255,107,1);
+    
 }
 
+.prim,.seg,.terc {
+    padding: 40px;
+}
+
+.abaout {
+    display: flex;
+    justify-content: space-around;
+    padding: 50px 150px;
+}
+
+.imagen {
+    width: 550px;
+    margin-right: 80px;
+    border: 5px solid rgb(255,107,1);
+    border-radius: 50px 0 50px 0;
+}
 
 footer {
     background-color: rgb(66,66,66);
