--- a/css/style.css
+++ b/css/style.css
@@ -132,21 +132,31 @@ main {
     padding: 40px;
 }
 
-.abaout {
+.about {
     display: flex;
     justify-content: space-around;
     padding: 50px 150px;
 }
 
 .imagen {
-    width: 550px;
-    margin-right: 80px;
+    width: 450px;
+    margin: 40px 80px 40px 0;
+    /* margin-right: 80px; */
     border: 5px solid rgb(255,107,1);
     border-radius: 50px 0 50px 0;
 }
 
+.about-me,.text-about,.ux,.aoo,.graphic {
+    font-family: Ten system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.about-me {
+    padding-bottom: 10px;
+    font-size: 34px;
+}
+
 .ux,.web,.app,.graphic {
-    display: flex;
+    padding-top: 20px;
 }
 
 
