--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,7 @@ header {
     text-decoration: none;
     color: black;
     font-weight: 500;
+    transition: color 0.3s;
 }
 
 .nav-link:hover {
@@ -45,16 +46,13 @@ header {
     border-radius: 50px;
     padding: 10px 30px;
     border: 3px solid rgb(255,107,1);
+    transition-duration: 0.5s;
 }
 
 .descargar:hover,.portfolio:hover,.hire-me:hover {
     background-color: rgb(255,107,1);
-    border-color: white;
 }
 
-main {
-    
-}
 
 .descripcion {
     font-family: Ten system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -82,6 +80,7 @@ main {
     border-radius: 50px;
     padding: 10px 50px;
     border: 3px solid rgb(255,107,1);
+    transition-duration: 0.5s;
 }
 
 .botones {
